--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "mariadb": "^2.1.4"
+    "express-ejs-layouts": "^2.5.0",
+    "faker": "^4.1.0",
+    "mariadb": "^2.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.1"
